argocd/mealie/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  labels:
    app: mealie
spec:
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      labels:
        app: mealie
    spec:
      containers:
      - image: ghcr.io/mealie-recipes/mealie:v2.3.0
        name: mealie
        resources:
          requests:
            cpu: "20m"
            memory: "1000M"
#        livenessProbe:
#          httpGet:
#            path: /_status/healthz
#            port: 5000
#          initialDelaySeconds: 90
#          timeoutSeconds: 10
#        readinessProbe:
#          httpGet:
#            path: /_status/healthz
#            port: 5000
#          initialDelaySeconds: 30
#          timeoutSeconds: 10
        ports:
        - containerPort: 9925
          name: http
        volumeMounts:
        - mountPath: /app/data
          name: mealie-data
      volumes:
        - name: mealie-data
          persistentVolumeClaim:
          claimName: mealie-pvc
      restartPolicy: Always
      imagePullPolicy: Always
