argocd/mealie/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
  labels:
    app: mealie
spec:
  ports:
  - port: 9925
    protocol: TCP
  selector:
    app: mealie
