argocd/mealie/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie-ingress
  annotations:
    # custom max body size for file uploading like backing image uploading
    nginx.ingress.kubernetes.io/proxy-body-size: 10000m
    nignx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: internal-nginx
  tls:
  - hosts:
    - mealie.int.alex-j-butler.com
    secretName: mealie-tls
  rules:
  - host: mealie.int.alex-j-butler.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mealie-svc
            port:
              number: 9925
